<resources>
    <string name="app_name">Nxt-Level live</string>
    <string name="app_key">5iFdpOvC5oAUs80Y33GLJKA7fAV6BLJFqPXu</string>
    <string name="app_secret">Qm8pSjKdhDF4GFzuHSyHaSNxJA9FqC1TrTTP</string>
    <string name="meeting_no">Meeting Number</string>
    <string name="password">Password</string>
    <string name="join">Join</string>
    <string name="meeting_no_error">please enter meeting number</string>
    <string name="password_error">please enter password</string>
    <string name="user_name">User Name</string>
    <string name="login">login</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="change_password">Change Password</string>
    <string name="welcome">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="current_password">current password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm new password</string>
    <string name="you_are_offline_please_connect_to_internet">You are offline please connect to internet</string>
    <string name="remaining_days">Remaining days</string>
    <string name="your_account_will_expire_in">Your account will expire in: %1$s</string>
    <string name="your_account_expired">Your account expired</string>
    <string name="unbable_to_connect_sdk">Unable to connect to sdk please check credentials</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="new_password_confirm_not_matched">New password and confirm password should be same</string>
    <string name="nxt_level_live">Nxt-Level Live</string>
    <string name="meeting_one">Meeting one</string>
    <string name="meeting_two">Meeting Two</string>
    <string name="meeting">Meeting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="latest_app_available_on_play_store">Latest App available on play store. Do you want to update?</string>
    <string name="min_app_version_available_on_play_store">Please update your App!!</string>
    <string name="invalid_arguments">Invalid Arguments</string>
    <string name="illigal_app_key_or_secret">Illegal App key or secret</string>
    <string name="authenticate_client_incompatible">Authenticate client incompatible</string>
    <string name="token_wrong">Token wrong</string>
    <string name="please_click_back">Please click back again to exit</string>
    <string name="vs">vs</string>
    <string name="back">Back</string>
    <string name="schedule">Match Schedule</string>
    <string name="no_schedule">No Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>